@@ -279,6 +279,30 @@ in a language other than Common, into Common.  The mob or item will SAY the \
 translation out loud.  The percentage chance given, which defaults to 100%, will \
 be the chance that the mob or item will translate any given sentence.  
 
+PROP_LANGUAGESPEAKER=\
+Property   : Prop_LanguageSpeaker\n\r\
+Targets    : Mobs, Items, Rooms, Exits, Areas\n\r\
+Parameters : LANGUAGE=[LANGUAGE] (HOMEONLY=TRUE/FALSE) (NOMOBS=TRUE/FALSE)\n\r\
+Parms(Cont):    (PLAYERS=TRUE/FALSE) (; [ZAPPER MASK])\n\r\
+Example    : LANGUAGE=Dwarven\n\r\
+Example    : LANGUAGE=Dwarven players=true ; -NAMES +BOB\n\r\
+Example    : LANGUAGE=SignLanguage homeonly=true ; -NAMES +BOB\n\r\
+Description: \n\r\
+This is property forces the mobs who become affected by this property to speak \
+the designated language until something else stops them.  On a mob, the affected \
+mob will speak the language.  On a room, those who enter or are born in a room \
+may be speak the language.  On an area, those who enter or are born in a room may \
+speak the language. On an exits, those who enter the exit may speak the language. \
+On an item, those who pick up the item may start speaking the language, while \
+putting it down will stop them.\n\r\
+\n\r\
+The parameters affect who will start speaking the language.  By default, any non-player \
+mob will become affected.  HOMEONLY will force only those whose starting room is \
+in the area to speak.  NOMOBS will eliminate all non-players from consideration.  \
+PLAYERS will allow players to be affected.  An optional zapper mask may follow a semicolon \
+to add additional masks. \
+<ZAPPERMASK=disallow>
+
 PROP_ROOMVIEW=\
 Property   : Prop_RoomView\n\r\
 Targets    : Exits, Rooms, Items\n\r\
